# nl-to-sql-peft-lab

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile.app  Dockerfile.ml  Dockerfile.ml-api  Dockerfile.runtime  Dockerfile.train  README.md  cloudbuild.app.yaml  cloudbuild.ml-api.yaml  cloudbuild.ml.yaml  cloudbuild.runtime.yaml  cloudbuild.train.yaml  pyproject.toml  requirements.txt  requirements.web.txt
configs/: gpt2_wikisql_bitfit_early_stopping.yaml  gpt2_wikisql_bitfit_early_stopping_benchmark.yaml  gpt2_wikisql_ia3_early_stopping.yaml  gpt2_wikisql_ia3_early_stopping_benchmark.yaml  gpt2_wikisql_prefix_tuning_early_stopping.yaml  gpt2_wikisql_prefix_tuning_early_stopping_benchmark.yaml  gpt2_wikisql_qlora_early_stopping.yaml  gpt2_wikisql_qlora_early_stopping_benchmark.yaml  hf_assets.yaml  qwen2_5_wikisql_bitfit_early_stopping.yaml  qwen2_5_wikisql_bitfit_early_stopping_benchmark.yaml  qwen2_5_wikisql_ia3_early_stopping.yaml  qwen2_5_wikisql_ia3_early_stopping_benchmark.yaml  qwen2_5_wikisql_prefix_tuning_early_stopping.yaml  qwen2_5_wikisql_prefix_tuning_early_stopping_benchmark.yaml  qwen2_5_wikisql_qlora_early_stopping.yaml  qwen2_5_wikisql_qlora_early_stopping_benchmark.yaml  smollm2_wikisql_bitfit_early_stopping.yaml  smollm2_wikisql_bitfit_early_stopping_benchmark.yaml  smollm2_wikisql_ia3_early_stopping.yaml  smollm2_wikisql_ia3_early_stopping_benchmark.yaml  smollm2_wikisql_prefix_tuning_early_stopping.yaml  smollm2_wikisql_prefix_tuning_early_stopping_benchmark.yaml  smollm2_wikisql_qlora_early_stopping.yaml  t5_small_wikisql_bitfit_benchmark.yaml  (+40 more)
(+111 files in other folders)
