[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nl-to-sql-peft-lab"
version = "0.1.0"
description = "Comparativa de tecnicas PEFT para NL-to-SQL en modelos generativos pequenos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34.0",
  "bitsandbytes>=0.43.0",
  "datasets>=2.20.0,<3.0.0",
  "evaluate>=0.4.2",
  "fastapi>=0.115.0",
  "huggingface_hub>=0.24.0,<1.0.0",
  "peft>=0.12.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "sentencepiece>=0.2.0",
  "torch>=2.3.0",
  "transformers>=4.44.0,<5.0.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]
